# pr-changes-matrix-builder

./: .pre-commit-config.yaml  Dockerfile  Dockerfile.test  LICENSE  Makefile  README.md  action.yml  docker-compose.yaml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: example-empty.yaml  example.yaml  pr-test.yaml  update-floating-tags.yaml
pr_changes/: __init__.py  __main__.py  action.py  config.py  gh.py  settings.yaml
tests/: conftest.py  test_action.py  test_config.py
