[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pr_changes"
version = "0.0.2"
description = "Build a matrix from a PR"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "pytest-xdist>=3.0",
]
dev = ["ipython", "debugpy"]

[project.scripts]
pr_changes = "pr_changes.__main__:main"

[tool.setuptools.packages.find]
include = ["pr_changes*"]

[tool.black]
line-length = 88
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.ruff]
lint.extend-select = ["D"]
lint.extend-ignore = [
  "D107",
  "D203",
  "D212",
  "D213",
  "D400",
  "D402",
  "D413",
  "D415",
  "D416",
  "D417",
]

# Same as Black.
line-length = 88

# Assume Python 3.11.
target-version = "py311"

[tool.ruff.lint.mccabe]
max-complexity = 20

[tool.isort]
skip = [".gitignore", ".venv"]
no_sections = true
lines_between_types = 1
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
profile = "black"

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_lines = [
  # re-enable the standard pragma
  "pragma: no cover",
  # Don't complain about missing debug-only code:
  "def __repr__",
  # Don't complain if tests don't hit defensive assertion code:
  "raise NotImplementedError",
  # Don't complain if non-runnable code isn't run:
  "if __name__ == .__main__.:",
]

[tool.coverage.run]
relative_files = true
data_file = "reports/.coverage"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
  "--cov-config=pyproject.toml",
  "--cov-report=xml:reports/coverage.xml",
  "--junitxml=reports/results.xml",
  "--cov-report=term-missing",
  "--cov=pr_changes",
]
testpaths = [
    "tests",
]
